--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
 <html>
+<head>
+<title>This is the beginning</title>
+</head>
 
+<body>
+<h1>Something</h1>
+
+
+<footer>
+
+</footer>
+</body>
 </html>
