--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
     <![endif]-->
   </head>
   <body>
-    <h1>Hello, world!</h1>
+
+<header>
+    <div id="logo" class="col-md-3">
+      &nbsp; 
+    </div>
+    <div id="title" class="col-md-9"> 
+        &nbsp; 
+    </div>
+</header>
+
+
+<div class="container">
+    <div class="row">
+        <div id="main-nav" class="col-md-3 no-float">Navigation
+
+        </div>
+        <div id="content" class="col-md-6 no-float">Content</div>
+        <div id="sidebar" class="col-md-3 no-float">Content</div>
+    </div>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
