--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@
   <body>
 
 <header>
-    <div id="logo" class="col-md-3">
-      &nbsp; 
-    </div>
-    <div id="title" class="col-md-9"> 
-        &nbsp; 
-    </div>
-</header>
 
+<!--     <img src="http://placehold.it/300x100">
+
+ -->  
+<div class="logo">something</div>
+
+<div class="mast">something else</div>
+</header>
 
 <div class="container">
     <div class="row">
-        <div id="main-nav" class="col-md-3 no-float">Navigation
+        <div id="main-nav" class="col-md-2 no-float">Navigation
 
         </div>
-        <div id="content" class="col-md-6 no-float">Content</div>
-        <div id="sidebar" class="col-md-3 no-float">Content</div>
+        <div id="content" class="col-md-8 no-float">Content</div>
+        <div id="sidebar" class="col-md-2 no-float">Content</div>
     </div>
 </div>
 
