--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <button class="btn btn-default" type="button" id="mobile-menu">
       <span class="glyphicon glyphicon-align-justify"></span>
     </button>
-    <h1 class="campaign"><span class="grey">#4386</span> BMW 6 Series <img src="img/live.png" class="live-glyph"></h1>
+    <h1 class="campaign"><span class="grey">#4386</span> BMW 6 Series <img src="img/live.png" class="live-glyph"> <small style="font-size: 10px;" class="teal">Live</small></h1>
   </div>
 
   <div id="reporting">
