--- a/index.html
+++ b/index.html
@@ -92,15 +92,15 @@
             </div><!--#graph-->
 
               <div class="col-xs-4 green-top-border">
-                <p><span class="green glyphicon glyphicon-stop"></span> <strong>Impressions</strong></p>
+                <p><span class="green glyphicon glyphicon-stop"></span> Impressions</p>
                 <h3 class="stats">2,088</h3>
               </div>
               <div class="col-xs-4">
-                <p><span class="teal glyphicon glyphicon-stop"></span> <strong>Clicks</strong></p>
+                <p><span class="teal glyphicon glyphicon-stop"></span> Clicks</p>
                 <h3 class="stats">397</h3>
               </div>
               <div class="col-xs-4">
-                <p><span class="purple glyphicon glyphicon-stop"></span> <strong>CTR</strong></p>
+                <p><span class="purple glyphicon glyphicon-stop"></span> CTR</p>
                 <h3 class="stats">1.45%</h3>
               </div>
 
